# simple-proc-macros

./: Cargo.toml  README.md
src/: main.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
